# idos-extensions

./: .gitignore  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  makefile
.github/workflows/: deploy.yml  review_and_deploy.yml
extension/: extension.go  gen.go
extension/chains/near/: near_online_test.go
extension/chains/near/registry/: Cargo.toml
extension/chains/near/registry/src/: lib.rs
go/: Dockerfile  go.mod  go.sum
go/extension/: chains.go  config.go  extension.go  gen.go
go/extension/chains/: common.go  common_test.go  interface.go
go/extension/chains/ethereum/: ethereum.go  ethereum_test.go
go/extension/chains/ethereum/registry/: registry-abi.json  registry.go  registry.sol
go/extension/chains/near/: near.go  near_online_test.go  near_test.go
